--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "Example using OpenLayers with Webpack",
   "scripts": {
-    "build": "webpack --config webpack.config.js"
+    "build": "webpack --config webpack.config.js",
+    "start:dev": "webpack-dev-server"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -13,7 +14,8 @@
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.4",
     "style-loader": "^0.18.2",
-    "webpack": "^3.3.0"
+    "webpack": "^3.3.0",
+    "webpack-dev-server": "^2.9.4"
   },
   "dependencies": {
     "ol": "^4.2.0",
