Working with new infinite-grid module.

--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,4 @@
 {
-    "presets": ["env", "react"],
-    "plugins": ["transform-react-jsx"]
+    "presets": ["env", "react", "es2015", "stage-0"],
+    "plugins": ["transform-react-jsx", "transform-es2015-destructuring", "transform-object-rest-spread"]
 }
