--- a/package.json
+++ b/package.json
@@ -16,6 +16,11 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^0.28.4",
+    "eslint": "^4.13.1",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.5.1",
     "style-loader": "^0.18.2",
     "webpack": "^3.3.0",
     "webpack-dev-server": "^2.9.4"
@@ -25,6 +30,7 @@
     "ol": "^4.2.0",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
-    "react-infinite-scroller": "^1.1.1"
+    "react-infinite-scroller": "^1.1.1",
+    "react-router-dom": "^4.2.2"
   }
 }
