--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
     "react-infinite-scroller": "^1.1.1",
-    "react-router-dom": "^4.2.2"
+    "react-router-dom": "^4.2.2",
+    "styled-components": "^2.3.0"
   }
 }
